# byos_fastapi

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
docs/: oidc-design.md
tests/: conftest.py  test_dashboard_status.py  test_device_health.py  test_oidc.py  test_oidc_security.py  test_panel.py  test_rotation_persistence.py  test_rotation_restart.py  test_screens.py
trmnl_server/: canvas.py  config.py  credentials.py  main.py  models.py  oidc.py  render.py  utils.py
trmnl_server/plugins/: base.py  garmin.py
trmnl_server/routes/: __init__.py  api.py  auth.py  images.py  oidc.py  panel.py
trmnl_server/screens/: __init__.py  base.py  homelab.py  readiness.py  stats.py
trmnl_server/services/: state.py
trmnl_server/sources/: __init__.py  garmin.py  prometheus.py  synthetic.py
trmnl_server/web/css/: styles.css
trmnl_server/web/js/: app.js
