[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trmnl-server"
version = "0.2.0"
description = "BYOS server rendering 1-bit homelab dashboards for TRMNL e-paper panels"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.3.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
trmnl-server = "trmnl_server.main:run"

[tool.setuptools.packages.find]
include = ["trmnl_server*"]
